# BrainCove

./: CMakeLists.txt  README.md
CMake-Modules/: FindOpenCL.cmake
MatrixIO/: BaseMatrix.hpp  CMakeLists.txt  DLLDefines.h  DataFile.cpp  DataFile.h  MatrixIO.cpp  MatrixIO.h  PointReader.cpp  PointReader.h  SquareMatrix.hpp  UpperTriangularMatrix.hpp
MatrixIOTests/: CMakeLists.txt  DEBUGGING_ENVIRONMENT.txt  DEBUGGING_ENVIRONMENT_laptop.txt  DEBUGGING_ENVIRONMENT_pc.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.bk.ui
MatrixIOTests/coordinates/: set20101126.csv  set20111801.csv
Rendering/: CMakeLists.txt  DLLDefines.h  rendering.qrc
Rendering/CLWrappers/: CLBufferObject.cpp  CLBufferObject.h  CLContext.cpp  CLContext.h  CLMemoryObject.cpp  CLMemoryObject.h  CLMemoryObjectCL.cpp  CLMemoryObjectGL.h  CLProgram.cpp  CLProgram.h  CLTexture2DObject.cpp  CLTexture2DObject.h  CLTexture3DObject.cpp  CLTexture3DObject.h
Rendering/Filters/: DataFilter.cpp  DataFilter.h
Rendering/Layouts/: BaseLayout.cpp  BaseLayout.h  BrainLayout.cpp  BrainLayout.h  BrainLayout1D.cpp  BrainLayout1D.h
Rendering/Mappers/: CLHighResRayCaster2.cpp  CLHighResRayCaster2.h  CLRayCaster.cpp  CLRayCaster.h  CLTwoPassRayCaster.cpp  CLTwoPassRayCaster.h  GPUGenericRayCastMapper.cpp  GPUGenericRayCastMapper.h  GPUPlaneRayCastMapper.bk.cpp  GPUPlaneRayCastMapper.bk.h  GPUPlaneRayCastMapper.cpp  GPUPlaneRayCastMapper.h  GPUVolumeRayCastMapper.bk.cpp  GPUVolumeRayCastMapper.bk.h  GPUVolumeRayCastMapper.cpp  GPUVolumeRayCastMapper.h  IGPUGenericRayCastMapper.cpp  IGPUGenericRayCastMapper.h
Rendering/Renderables/: ARenderable.cpp  ARenderable.h  CorrelationVolume.cpp  CorrelationVolume.h  MatrixImagePlane.cpp  MatrixImagePlane.h  NQVTKRenderable.cpp  NQVTKRenderable.h  VTKRenderable.cpp  VTKRenderable.h
Rendering/Selectors/: BaseVoxelSelector.cpp  BaseVoxelSelector.h  BrainVoxelSelector.cpp  BrainVoxelSelector.h  DataSelection.cpp  DataSelection.h  MatrixVoxelSelector.cpp  MatrixVoxelSelector.h  VoxelSelection.cpp  VoxelSelection.h  VoxelVoxelSelection.cpp  VoxelVoxelSelection.h
Rendering/Systems/: ARenderSystem.cpp  ARenderSystem.h  NQVTKRenderSystem.cpp  NQVTKRenderSystem.h  VTKRenderSystem.cpp  VTKRenderSystem.h
Rendering/Utils/: CLGLTexture___old.cpp  CLGLTexture___old.h  CLTexturePainter.cpp  CLTexturePainter.h  ColorMapping.cpp  ColorMapping.h  PointsToVolumeData.cpp  PointsToVolumeData.h  cl.hpp  clext.cpp  clext.h
Rendering/kernels/: compositing.cl  defines.cl  images.cl  kernel4.cl  raysetup.cl  utils.cl
Rendering/shaders/: Lighting.fs  Lighting.vs
Shared/shaders/: Lighting.fs  Lighting.vs
UI/: CMakeLists.txt  DLLDefines.h  style_sheet.qss  ui.qrc
UI/editors/: editors.cmake  kerneleditorform.cpp  kerneleditorform.h  kerneleditorform.ui  tablemodel.cpp  tablemodel.h
UI/styles/: QInteractorStyle.cpp  QInteractorStyle.h  View2DInteractorStyle.cpp  View2DInteractorStyle.h  View3DInteractorStyle.cpp  View3DInteractorStyle.h  styles.cmake
UI/views/: mdiwidget.cpp  mdiwidget.h  renderwidget.cpp  renderwidget.h  renderwidget2d.cpp  renderwidget2d.h  renderwidget3d.cpp  renderwidget3d.h  renderwidget3dh.cpp  renderwidget3dh.h  renderwidgetslices.cpp  renderwidgetslices.h  sliceviewswidget.cpp  sliceviewswidget.h  view3dsettings.ui  views.cmake
